--- a/lib/proca_web/templates/dash/orgs.html.leex
+++ b/lib/proca_web/templates/dash/orgs.html.leex
@@ -18,16 +18,16 @@
   <% end %>
 </ul>
 
-<%= if editing? @current_org do %>
+<%= if editing? @change_org do %>
   <div class="modal active d-block border-primary" role="dialog">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
 
         <div class="modal-header bg-success text-white">
-          <%=  if new_record? @current_org do %>
+          <%=  if new_record? @change_org do %>
             <h5 class="modal-title">Add new organisation</h5>
           <% else %>
-            <h5 class="modal-title">Edit <%= @current_org.title %></h5>
+            <h5 class="modal-title">Edit <%= @change_org.data.title %></h5>
           <% end %>
 
           <button phx-click="org_discard" type="button" class="close" data-dismiss="modal" aria-label="Close">
@@ -36,21 +36,24 @@
         </div>
 
         <div class="modal-body">
-          <form>
+          <%= form_for @change_org, "#", [phx_submit: :org_save], fn f -> %>
             <div class="form-group">
-              <label for="orgTitle">Title &mdash; how is the organisation called?</label>
-              <input type="text" name="title" id="orgTitle" class="form-control" />
+            <%= label f, :title, "Title &mdash; how is the organisation called?" %>
+            <%= text_input f, :title, class: "form-control" %>
+            <%= error_tag f, :title %>
             </div>
-            <div class="form-group">    
-              <label for="orgName">Short name &mdash; short, alphanumeric name without spaces</label>
-              <input type="text" name="name" id="orgName" pattern="^[\w_-]{3,}$" class="form-control" />
+            
+            <div class="form-group">
+            <%= label f, :name, "Short name &mdash; short, alphanumeric name without spaces" %>
+            <%= text_input f, :name, class: "form-control" %>
+            <%= error_tag f, :name %>
             </div>
-          </form>
+
+            <%= submit "Save", class: "btn btn-primary float-right" %>
+          <% end %>
+
         </div>
 
-        <div class="modal-footer">
-          <button type="button" class="btn btn-primary">Save</button>
-        </div>
 
       </div>
     </div>
