Override Pow templates to give them more BS/SB2-admin feel

--- a/lib/proca_web/templates/pow/registration/edit.html.eex
+++ b/lib/proca_web/templates/pow/registration/edit.html.eex
@@ -1,30 +1,41 @@
-<h1>Edit profile</h1>
+<h1 class="h3">Edit profile</h1>
 
-<%= form_for @changeset, @action, [as: :user], fn f -> %>
-  <%= if @changeset.action do %>
-    <div class="alert alert-danger">
-      <p>Oops, something went wrong! Please check the errors below.</p>
-    </div>
-  <% end %>
+<div class="row">
+  <div class="col-lg-6">
+    <%= form_for @changeset, @action, [as: :user], fn f -> %>
+      <%= if @changeset.action do %>
+        <div class="alert alert-danger">
+          <p>Oops, something went wrong! Please check the errors below.</p>
+        </div>
+      <% end %>
 
-  <%= label f, :current_password %>
-  <%= password_input f, :current_password %>
-  <%= error_tag f, :current_password %>
+      <div class="form-group">
+        <%= label f, :current_password %>
+        <%= password_input f, :current_password, class: "form-control" %>
+        <%= error_tag f, :current_password %>
+      </div>
 
-  <%= label f, Pow.Ecto.Schema.user_id_field(@changeset) %>
-  <%= text_input f, Pow.Ecto.Schema.user_id_field(@changeset) %>
-  <%= error_tag f, Pow.Ecto.Schema.user_id_field(@changeset) %>
+      <div class="form-group">
+        <%= label f, Pow.Ecto.Schema.user_id_field(@changeset) %>
+        <%= text_input f, Pow.Ecto.Schema.user_id_field(@changeset), class: "form-control" %>
+        <%= error_tag f, Pow.Ecto.Schema.user_id_field(@changeset) %>
+      </div>
 
-  <%= label f, :password %>
-  <%= password_input f, :password %>
-  <%= error_tag f, :password %>
+      <div class="form-group">
+        <%= label f, :password %>
+        <%= password_input f, :password, class: "form-control" %>
+        <%= error_tag f, :password %>
+      </div>
 
-  <%= label f, :password_confirmation %>
-  <%= password_input f, :password_confirmation %>
-  <%= error_tag f, :password_confirmation %>
+      <div class="form-group">
+        <%= label f, :password_confirmation %>
+        <%= password_input f, :password_confirmation, class: "form-control" %>
+        <%= error_tag f, :password_confirmation %>
+      </div>
 
-  <div>
-    <%= submit "Update" %>
+      <div>
+        <%= submit "Update", class: "btn btn-primary" %>
+      </div>
+    <% end %>
   </div>
-<% end %>
-
+</div>
