Auth and org login changes
- both session and live socket assigns use user for signed in user (not current_user)
- staffer is selected for staffer last used
- dashboard will not have org name in them: /dash/$org/settings -> /dash/settings
- sidebar will hide elements for signed users when not signed

--- a/lib/proca_web/templates/layout/app.html.eex
+++ b/lib/proca_web/templates/layout/app.html.eex
@@ -35,11 +35,11 @@
 
           <!-- Falsh msg (should be live view b/c what about live alerts? -->
           <div id="flash" class="container-fluid">
-            <% if get_flash(@conn, :info) do %>
+            <%= if get_flash(@conn, :info) do %>
               <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
             <% end %>
 
-            <% if get_flash(@conn, :error) do %>
+            <%= if get_flash(@conn, :error) do %>
               <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
             <% end %>
           </div>
