Remove a typo from template file

--- a/lib/proca_web/templates/dash/orgs.html.leex
+++ b/lib/proca_web/templates/dash/orgs.html.leex
@@ -42,7 +42,7 @@
             <%= label f, :title, "Title – how is the organisation called?" %>
             <%= text_input f, :title, class: "form-control" %>
             <%= error_tag f, :title %>
-            </div>M
+            </div>
             
             <div class="form-group">
             <%= label f, :name, "Short name – short, alphanumeric name without spaces" %>
